--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                 </p>
                 <div class="video-container">
                     <!-- REPLACE THE VIDEO ID BELOW WITH YOUR ACTUAL YOUTUBE VIDEO ID -->
-                    <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
+                    <iframe src="https://www.youtube.com/embed/https://F2N0aKYnCjY" 
                             title="NYC Taxi Pulse Dashboard Walkthrough" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
