--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                 </p>
                 <div class="video-container">
                     <!-- REPLACE THE VIDEO ID BELOW WITH YOUR ACTUAL YOUTUBE VIDEO ID -->
-                    <iframe src="https://youtu.be/F2N0aKYnCjY" 
+                    <iframe src="https://www.youtube.com/embed/F2N0aKYnCjY"
                             title="NYC Taxi Pulse Dashboard Walkthrough" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
