--- a/index.html
+++ b/index.html
@@ -699,12 +699,12 @@
                             allowfullscreen>
                     </iframe>
                 </div>
-                <div style="background: #fff3cd; padding: 15px; border-radius: 8px; margin-top: 20px; border-left: 4px solid #ffc107;">
+                <!-- <div style="background: #fff3cd; padding: 15px; border-radius: 8px; margin-top: 20px; border-left: 4px solid #ffc107;">
                     <p style="color: #856404; margin: 0;">
                         <strong>📝 Instructions:</strong> Record your dashboard walkthrough using OBS Studio (free) or any screen recorder. 
                         Upload to YouTube and replace <code>YOUR_VIDEO_ID</code> in the iframe src with your actual video ID.
                     </p>
-                </div>
+                </div> -->
             </div>
             
             <!-- Documentation Section -->
