Remove commented team member div from index.html
Removed commented out team member section in index.html.

--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <!-- <div class="col-md-4">
                         <div class="team-member">
                             <i class="fas fa-user-circle" style="font-size: 3rem; color: var(--success);"></i>
                             <h4>Saud Khan</h4>
@@ -657,7 +657,7 @@
                                 ✓ Presentation & Video
                             </p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-top: 20px; text-align: center;">
                     <p style="color: #555; margin: 0;">
