--- a/index.html
+++ b/index.html
@@ -621,6 +621,49 @@
             <!-- Team Section -->
             <div class="section" id="team">
                 <h2><i class="fas fa-users"></i> Team Members</h2>
+                <div class="row justify-content-center">
+                    <div class="col-md-4">
+                        <div class="team-member text-center">
+                            <i class="fas fa-user-circle" style="font-size: 3rem; color: var(--primary);"></i>
+                            <h4>M. Mustafa Shah</h4>
+                            <p class="role">2022407</p>
+                            <p style="margin-top: 10px; font-size: 0.9rem; color: #555;">
+                                ✓ Dashboard Architecture<br>
+                                ✓ Advanced Callbacks & Linking<br>
+                                ✓ Data Pipeline Development<br>
+                                ✓ Data Engineering & EDA
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="team-member text-center">
+                            <i class="fas fa-user-circle" style="font-size: 3rem; color: var(--secondary);"></i>
+                            <h4>Hussain Ahmad</h4>
+                            <p class="role">2022220</p>
+                            <p style="margin-top: 10px; font-size: 0.9rem; color: #555;">
+                                <br>
+                                ✓ Visualization Design<br>
+                                ✓ GitHub Deployment<br>
+                                ✓ Testing & QA<br>
+                                ✓ Presentation & Video<br>
+                                ✓ Documentation
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-top: 20px; text-align: center;">
+                    <p style="color: #555; margin: 0;">
+                        <strong style="color: var(--primary);">Course:</strong> Data Visualization | <strong style="color: var(--primary);">Semester:</strong> Fall 2025
+                    </p>
+                </div>
+            </div>
+
+
+
+
+            <!-- 
+            <div class="section" id="team">
+                <h2><i class="fas fa-users"></i> Team Members</h2>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="team-member">
@@ -630,7 +673,8 @@
                             <p style="margin-top: 10px; font-size: 0.9rem; color: #555;">
                                 ✓ Dashboard Architecture<br>
                                 ✓ Advanced Callbacks & Linking<br>
-                                ✓ Data Pipeline Development
+                                ✓ Data Pipeline Development<br>
+                                ✓ Data Engineering & EDA
                             </p>
                         </div>
                     </div>
@@ -640,12 +684,15 @@
                             <h4>Hussain Ahmad</h4>
                             <p class="role">2022220</p>
                             <p style="margin-top: 10px; font-size: 0.9rem; color: #555;">
-                                ✓ Data Engineering & EDA<br>
+                                <br>
                                 ✓ Visualization Design<br>
+                                ✓ GitHub Deployment<br>
+                                ✓ Testing & QA<br>
+                                ✓ Presentation & Video<br>
                                 ✓ Documentation
                             </p>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- <div class="col-md-4">
                         <div class="team-member">
                             <i class="fas fa-user-circle" style="font-size: 3rem; color: var(--success);"></i>
@@ -658,14 +705,14 @@
                             </p>
                         </div>
                     </div> -->
-                </div>
+                <!-- </div>
                 <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-top: 20px; text-align: center;">
                     <p style="color: #555; margin: 0;">
                         <strong style="color: var(--primary);">Course:</strong> Data Visualization | <strong style="color: var(--primary);">Semester:</strong> Fall 2025
                     </p>
                 </div>
             </div>
-            
+             -->
             <!-- CTA Section -->
             <div class="cta-section">
                 <h3>Ready to Explore Urban Mobility Patterns?</h3>
